src/syntax/tests/data/negative/expr-2.hsh
fun(1, hello., 3,) # missing dot access identifier.
5 + 5
